Don't show habitability value for vaccum planets

--- a/app/src/main/resources/WelcomePage.html
+++ b/app/src/main/resources/WelcomePage.html
@@ -5,27 +5,23 @@
     <style>
       body {
         color: white;
-        font: "Tahoma";
+        font: "Roboto", "Tahoma";
         background-color: #1f1f38;
         margin: 50px;
       }
-      bigText {
+      .bigText {
         font-size: 40px;
       }
-      midText {
+      .midText {
         font-size: 30px;
       }
-      smallText {
+      .smallText {
         font-size: 20px;
       }
     </style>
   </head>
   <body>
-    <div class="bigText">
-      oi
-    </div>
-    <div class="midText">
-      oi
-    </div>
+    <div class="bigText">oi</div>
+    <div class="midText">oi</div>
   </body>
 </html>
