--- a/app/src/main/resources/HelpPage.html
+++ b/app/src/main/resources/HelpPage.html
@@ -9,6 +9,7 @@
       /*}*/
       body {
         background-color: #1f1f38;
+        border: none;
       }
       .container {
         width: 80%;
